Criei um algorítimo que calcula quanto o salário de um funcionário irá aumentar de acordo com o seu cargo.

--- a/Salario/index.html
+++ b/Salario/index.html
@@ -31,6 +31,8 @@
             <option id="txtCodigo103">Código 103 - Técnico</option>
             <option id="txtCodigo104">Código 104 - Outro</option>
         </select>
+
+        <button></button>
     </div>
 </body>
 </html>
