Converti o meu primeiro programa em Js para C# e adicionei no menu do programa.

--- a/TrocoFacil/index.html
+++ b/TrocoFacil/index.html
@@ -1,13 +1,12 @@
-<meta charset="utf-8" />
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Troco Fácil </title>
+    <title> Troco Fï¿½cil </title>
     <script>
 
         function entregarTroco(valorTroco, cedula) {
             while (valorTroco >= cedula) {
-                alert("Pegue uma cédula de " + cedula + " e entregue ao cliente.");
+                alert("Pegue uma cï¿½dula de " + cedula + " e entregue ao cliente.");
                 valorTroco = valorTroco - cedula;
             }
             return valorTroco;
@@ -45,10 +44,10 @@
                 valorTroco = entregarTroco(valorTroco, 0.05);
                 valorTroco = entregarTroco(valorTroco, 0.01);
 
-                alert("Seu troco é de " + valorTrocoOriginal + ". Obrigado pela preferência. Volte sempre!");
+                alert("Seu troco ï¿½ de " + valorTrocoOriginal + ". Obrigado pela preferï¿½ncia. Volte sempre!");
 
             } else {
-                alert("Obrigado pela preferência. Volte sempre!");
+                alert("Obrigado pela preferï¿½ncia. Volte sempre!");
             }
         }
 
