Refatora os links de cada programa para rodas em outras máquinas.

--- a/Estudos/site-html/index.html
+++ b/Estudos/site-html/index.html
@@ -5,17 +5,17 @@
 </li>
 <li><p><a href="https://zambaldi21.github.io/MediaDeAprovacao/index.html">Média de aprovação</a></p>
 </li>
-<li><a href="https://zambaldi21.github.io/TrocoFacil/index.html">Troco Fácil</a></li>
-<li><a href="https://Zambaldi21.github.io/CalculoABC/index.html">Cálculo D</a></li>
-<li><a href="https://Zambaldi21.github.io/MaiorNumerro/index.html">Maior número</a></li>
-<li><a href="https://Zambaldi21.github.io/CategoriaDeNadadores/index.html">Categoria de nadadores</a></li>
-<li><a href="https://Zambaldi21.github.io/IdadeEmDias/index.html">Idade em dias</a></li>
-<li><a href="https://Zambaldi21.github.io/SistemasDeEquacoesLineares/index.html">Sistema de equações lineares</a></li>
-<li><a href="https://zambaldi21.github.io/DistanciaEntrePontos/index.html">Distancia entre pontos</a></li>
-<li><a href="https://zambaldi21.github.io/EquacaoSegundoGrau/index.html">Equacão do 2º grau</a></li>
-<li><a href="https://zambaldi21.github.io/ConversaoHora/index.html">Conversao hora</a></li>
-<li><a href="https://zambaldi21.github.io/Multiplo/index.html">Multiplo</a></li>
-<li><a href="https://zambaldi21.github.io/PesoIdeal/index.html">Peso ideal</a></li>
-<li><a href="https://zambaldi21.github.io/Calculadora/index.html">Calculadora</a></li>
-<li><a href="https://zambaldi21.github.io/Triangulo/index.html">Triângulo</a></li>
+<li><a href="https://zambaldi21.github.io/Estudos/site-html/TrocoFacil/index.html">Troco Fácil</a></li>
+<li><a href="https://Zambaldi21.github.io/Estudos/site-html/CalculoABC/index.html">Cálculo D</a></li>
+<li><a href="https://Zambaldi21.github.io/Estudos/site-html/MaiorNumerro/index.html">Maior número</a></li>
+<li><a href="https://Zambaldi21.github.io/Estudos/site-html/CategoriaDeNadadores/index.html">Categoria de nadadores</a></li>
+<li><a href="https://Zambaldi21.github.io/Estudos/site-html/IdadeEmDias/index.html">Idade em dias</a></li>
+<li><a href="https://Zambaldi21.github.io/Estudos/site-html/SistemasDeEquacoesLineares/index.html">Sistema de equações lineares</a></li>
+<li><a href="https://zambaldi21.github.io/Estudos/site-html/DistanciaEntrePontos/index.html">Distancia entre pontos</a></li>
+<li><a href="https://zambaldi21.github.io/Estudos/site-html/EquacaoSegundoGrau/index.html">Equacão do 2º grau</a></li>
+<li><a href="https://zambaldi21.github.io/Estudos/site-html/ConversaoHora/index.html">Conversao hora</a></li>
+<li><a href="https://zambaldi21.github.io/Estudos/site-html/Multiplo/index.html">Multiplo</a></li>
+<li><a href="https://zambaldi21.github.io/Estudos/site-html/PesoIdeal/index.html">Peso ideal</a></li>
+<li><a href="https://zambaldi21.github.io/Estudos/site-html/Calculadora/index.html">Calculadora</a></li>
+<li><a href="https://zambaldi21.github.io/Estudos/site-html/Triangulo/index.html">Triângulo</a></li>
 </ul>
